--- a/src/View/Form_SanPham.form
+++ b/src/View/Form_SanPham.form
@@ -501,6 +501,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="L&#x1ecd;c"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnLocActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JTextField" name="txtLocGia">
             </Component>
